# homelab-infra

./: .ansible-lint  .bandit  .branch-dependencies.yaml  .env.example  .env.template  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  .yamllint  ATTRIBUTIONS.md  BOOTSTRAP_ISSUES_TRACKER.md  BRANCH_CONSOLIDATION_ANALYSIS.md  CHANGELOG.md  CURRENT_PHASE.md  DEPLOYMENT-VALIDATION-REPORT.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  FINAL_DEPLOYMENT_VALIDATION_REPORT.md  MVP_RELEASE_SUMMARY.md  Makefile  NOTICE  PROJECT_STRUCTURE.md  README.md  SCRIPT_REFACTORING_SUMMARY.md  STEP-11-COMPLETION-SUMMARY.md  TESTING_INTEGRATION_COMPLETE.md  analyze_branches.sh  branch_mapping.yaml  check-env-vars.sh  check-portal-status.sh  cherry-pick-unique-commits.sh  clean-and-setup-k3s.sh  code-quality-output.txt  code-review-fixes-v2.md  code_review_context.md  (+29 more)
.analysis/: REFACTORING.md  branch_tracking.yaml  branch_verification.md  cleanup_plan.yaml  consolidation_plan.yaml  scripts.md  test_plan.yaml  timeline.yaml
.analysis/indices/: doc_index.yaml  feature_index.yaml  feature_map.yaml
.analysis/issues/: REFACTORING_ISSUES.yaml
.analysis/metadata/: analyze_branches.py  branch_analysis.yaml  branch_list.txt  dependency_map.yaml
.claude/: config.json  settings.json
.github/: branch-protection.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci-cd.yaml  deployment-validation-hooks.yml  deployment.yml  gitleaks.yml  infrastructure-testing.yml  repository-monitoring.yml  security-scans.yml  validation.yml
.gitlab/ci/: helm.yml  monitoring.yml  security.yml  terraform.yml
.trunk/: trunk.yaml  trunk.yaml.backup
LICENSES/: AGPL-3.0-REFERENCE.md  Apache-2.0.txt
ansible/: AUTHENTICATION_SETUP.md  README.md  ansible.cfg  setup-passwordless-sudo.sh  site.yml
ansible/inventory/: hosts.yml  vm-test-inventory.yml
ansible/legacy-migration/: README.md  REFACTORING_SUMMARY.md
ansible/playbooks/: bootstrap-system.yml  cleanup-k3s.yml  cleanup-vm.yml  (+21 more)
config/: README.md
deployments/: README.md
docker/: .env.example  README.md  docker-compose.yml
docs/: BASTION-HOST-SECURITY.md  BRANCH-SYNCHRONIZATION-RESOLUTION.md  BRANCH_MANAGEMENT.md  IMPLEMENTATION_SUMMARY.md  MYPY_CONFIGURATION.md  MYPY_ENHANCEMENT_SUMMARY.md  README.md  REPOSITORY-ARCHITECTURE.md  TEST_SETUP.md  architecture.md  backup-solutions-guide.md  branch-cleanup.md  branch_mapping.md  branch_status.md  branch_status_report.md  branching-strategy.md  certificates.md  claude_integration.md  cli-reference.md  comprehensive-user-guide.md  configuration.md  dependency_relationships.md  deployment-checklist.md  deployment.md  environment-variables.md  homelab-portal-enhancement-plan.md  index.md  installation.md  interfaces-and-processes.md  k3s-deployment-report.md  k3s-setup.md  manage-commands.md  network-validation-step10-results.md  network.md  pr-descriptions.md  private-configuration-guide.md  quickstart.md  rootless-deployment-guide.md  rootless-deployment-plan.md  security.md  (+5 more)
helm/: README-ENHANCED.md  README.md  SECRETS-AND-CONFIGURATION-VALIDATION.md  SECURITY-COMPLIANCE-SUMMARY.md  SECURITY-PRIVILEGE-REVIEW.md  deploy-homelab-optimized.sh  helmfile.yaml  repositories.yaml  security-report-20250728-142449.txt  security-report-20250728-142523.txt  security-report-20250728-143941.txt  security-report-20250728-144139.txt  security-report-20250728-150011.txt  security-report-20250728-150131.txt  security-report-20250728-150239.txt  security-report-20250728-154715.txt  security-report-20250728-155232.txt  security-report-20250728-161200.txt  security-report-20250728-161249.txt  security-report-20250728-161809.txt  security-report-20250728-161905.txt  security-report-20250728-163026.txt  security-report-20250728-170438.txt  security-report-20250728-170503.txt  security-report-20250728-170830.txt  security-report-20250730-145707.txt  validate-charts.sh  validate-templates.sh
homelab_orchestrator/: README.md  __init__.py  __main__.py  __version__.py  cli.py
kubernetes/: README.md  enhanced-portal.yaml  portal-ingress-noauth.yaml
kubernetes/homelab-portal/backend/: pyproject.toml
kubernetes/homelab-portal/backend/src/models/: __init__.py  config.py  security.py  service.py
monitoring/: README.md
scripts/: README.md  __init__.py  analyze-and-test-develop.sh  analyze_branches.py  analyze_project.sh  backup_branches.sh  check-unsigned-commits.sh  code-quality.sh  consolidate_branches.sh  deploy-and-adjust-network.sh  deploy-and-validate.sh  deploy-gitlab-keycloak.sh  deploy-homelab.sh  deploy.sh  fix-all-unsigned-commits.sh  fix-main-unsigned-commits.sh  fix-vm-network.sh  generate-domains-config.py  health-monitor.sh  index_docs.py  install-ca-cert.sh  map_features.py  migrate-to-consolidated-config.sh  network-validation.sh  setup-vm-auth.sh  sync-private-config.sh  sync_service_names.sh  sync_untracked.sh  test-deployment-dry-run.sh  test-deployment-readiness.sh  test-ssh-readiness.sh  update-branches.sh  update_branches.sh  update_protection.sh  validate-deployment-comprehensive.sh  validate-deployment-local.sh  validate-k3s-simple.sh  validate-k8s-manifests.sh  validate_deployment.py  validate_structure.sh
terraform/: README.md  main.tf  outputs.tf  variables.tf
test_results/: branch_test_mapping.md  homelab_issues_report_20250729_171022.md  homelab_test_report_20250729_171022.json  homelab_test_report_20250729_171022.md  integrated_test_report_20250729_154124.json  integrated_test_report_20250729_154124.md  integrated_test_report_20250729_154606.json  integrated_test_report_20250729_154606.md  integrated_test_report_20250731_195313.json  integrated_test_report_20250731_195313.md
testing/: API.md  INTEGRATION_TESTING.md  README.md  authentication-integration-test.sh  regression_tests.py  run-enhanced-tests.sh  test_utils.py  utils.py
tools/: README.md
(+380 files in other folders)
